Fix file paths for kubernetes deployment of backend