@@ -3,7 +3,6 @@ package at.uibk.dps.rm.entity.deployment;
 import lombok.Getter;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @Getter
 public class DeploymentPath {
@@ -13,15 +12,15 @@ public class DeploymentPath {
     private final Path functionsFolder;
 
     public DeploymentPath(long reservationId) {
-        this.rootFolder = Paths.get("temp\\reservation_" + reservationId);
+        this.rootFolder = Path.of("var", "lib", "docker", "apollo", "temp","reservation_" + reservationId);
         this.functionsFolder = Path.of(rootFolder.toString(), "functions");
     }
 
     public Path getModuleFolder(TerraformModule module) {
-        return Paths.get(rootFolder + "\\" + module.getModuleName());
+        return Path.of(rootFolder.toString(), module.getModuleName());
     }
 
     public Path getTFCacheFolder() {
-        return Paths.get("temp\\plugin_cache").toAbsolutePath();
+        return Path.of("data", "rm", "temp","plugin_cache").toAbsolutePath();
     }
 }
